objects/dca_cnvrt_note__Convert_Notes_to_ContentNotes_Log__c.object
<CustomObject>
    <fields>
        <fullName>dca_cnvrt_note__Detail__c</fullName>
        <label>Detail</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_note__Job_ID__c</fullName>
        <description>The Batchable or Queueable Job ID when this error occurred.</description>
        <inlineHelpText>The Batchable or Queueable Job ID when this error occurred.</inlineHelpText>
        <label>Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_note__Log_Time__c</fullName>
        <description>In List Views and Reports the standard CreatedDate and LastModifiedDate display only the "date" portion and not the "time". This formula field is workaround to to view the "date" and "time" together.</description>
        <formula>CreatedDate</formula>
        <label>Log Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_note__New_Note_ID__c</fullName>
        <description>If the log message is about a specific conversion issue with a record then this is the Enhanced Note ID.</description>
        <inlineHelpText>If the log message is about a specific conversion issue with a record then this is the Enhanced Note ID.</inlineHelpText>
        <label>New Note ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_note__Old_Note_ID__c</fullName>
        <description>If the log message is about a specific conversion issue with a record then this is the original Note ID.</description>
        <inlineHelpText>If the log message is about a specific conversion issue with a record then this is the original Note ID.</inlineHelpText>
        <label>Old Note ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_note__Status__c</fullName>
        <description>Indicates the status of log message, whether a note was successfully converted or perhaps that it was skipped during conversion or that it failed conversion. The API values match conversion result enum value in apex code.</description>
        <inlineHelpText>Indicates the status of log message, whether a note was successfully converted or perhaps that it was skipped during conversion or that it failed conversion.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONVERTED</fullName>
                    <default>true</default>
                    <label>Converted</label>
                </value>
                <value>
                    <fullName>SKIPPED</fullName>
                    <label>Skipped</label>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                    <label>Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dca_cnvrt_note__Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>When deployed as a managed package then users cannot see errors logged to the Debug Log. This object stores any errors and messages the Adminsitrator may need to know about when troubleshooting conversion issues. You may delete these records after you have reviewed them.</description>
    <label>Convert Notes to Enhanced Notes Log</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Convert Notes to Enhanced Notes Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>dca_cnvrt_note__All</fullName>
        <columns>NAME</columns>
        <columns>dca_cnvrt_note__Status__c</columns>
        <columns>dca_cnvrt_note__Summary__c</columns>
        <columns>dca_cnvrt_note__Detail__c</columns>
        <columns>dca_cnvrt_note__Log_Time__c</columns>
        <columns>dca_cnvrt_note__Old_Note_ID__c</columns>
        <columns>dca_cnvrt_note__New_Note_ID__c</columns>
        <columns>dca_cnvrt_note__Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>dca_cnvrt_note__Converted</fullName>
        <columns>NAME</columns>
        <columns>dca_cnvrt_note__Status__c</columns>
        <columns>dca_cnvrt_note__Summary__c</columns>
        <columns>dca_cnvrt_note__Detail__c</columns>
        <columns>dca_cnvrt_note__Log_Time__c</columns>
        <columns>dca_cnvrt_note__Old_Note_ID__c</columns>
        <columns>dca_cnvrt_note__New_Note_ID__c</columns>
        <columns>dca_cnvrt_note__Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dca_cnvrt_note__Status__c</field>
            <operation>equals</operation>
            <value>CONVERTED</value>
        </filters>
        <label>Converted</label>
    </listViews>
    <listViews>
        <fullName>dca_cnvrt_note__Error</fullName>
        <columns>NAME</columns>
        <columns>dca_cnvrt_note__Status__c</columns>
        <columns>dca_cnvrt_note__Summary__c</columns>
        <columns>dca_cnvrt_note__Detail__c</columns>
        <columns>dca_cnvrt_note__Log_Time__c</columns>
        <columns>dca_cnvrt_note__Old_Note_ID__c</columns>
        <columns>dca_cnvrt_note__New_Note_ID__c</columns>
        <columns>dca_cnvrt_note__Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dca_cnvrt_note__Status__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <label>Error</label>
    </listViews>
    <listViews>
        <fullName>dca_cnvrt_note__Skipped</fullName>
        <columns>NAME</columns>
        <columns>dca_cnvrt_note__Status__c</columns>
        <columns>dca_cnvrt_note__Summary__c</columns>
        <columns>dca_cnvrt_note__Detail__c</columns>
        <columns>dca_cnvrt_note__Log_Time__c</columns>
        <columns>dca_cnvrt_note__Old_Note_ID__c</columns>
        <columns>dca_cnvrt_note__New_Note_ID__c</columns>
        <columns>dca_cnvrt_note__Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dca_cnvrt_note__Status__c</field>
            <operation>equals</operation>
            <value>SKIPPED</value>
        </filters>
        <label>Skipped</label>
    </listViews>
</CustomObject>